[package]
name = "agv-planner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cbs = { path = "../cbs" }
nannou = "0.18.1"
ncollide2d = "0.33.0"
ordered-float = "4.2.0"
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tuple = "0.5.2"
